<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CG starter</string>
    <string name="action_settings">Settings</string>
    <string name="item">Point</string>
    <string name="name">Name</string>
    <string name="picture">Picture</string>
    <string name="auto">Autostart</string>
    <string name="auto_sum">Autostart this item in selected time</string>
    <string name="no_cg">CityGuide not found</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="interval">Interval</string>
    <string name="interval2">Second interval</string>
    <string name="interval_sum">Select interval for autostart</string>
    <string name="item_sum">Select point or saved route</string>
    <string name="name_sum">Input point name</string>
    <string name="clear">Clear</string>
    <string name="clear_sum">Clear button</string>
    <string name="days">Days for run</string>
    <string name="button">Button settings</string>
    <string name="button_sum">For setup button press and hold it</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="auto_pause">Autostart delay: %1 sec</string>
    <string name="inactive_pause">If not any buttons pressed %1 sec</string>
    <string name="sec">sec</string>
    <string name="rotate">Screen rotate</string>
    <string name="rotate_sum">Disable screen rotate</string>
    <string name="bt">Bluetooth control</string>
    <string name="bt_sum">Turn ON bluetooth</string>
    <string name="data">Mobile data control</string>
    <string name="data_sum">Turn ON mobile data</string>
    <string name="level">Volume control</string>
    <string name="ring_level">Volume on the call</string>
    <string name="no_volume">No change volume</string>
    <string name="set_volume">Set level</string>
    <string name="carmode">Car mode</string>
    <string name="carmode_sum">Launch application on car mode</string>
    <string name="power">Power</string>
    <string name="powermode">Launch on power</string>
    <string name="phone">Phone control</string>
    <string name="phone_sum">Show CityGuide while phone call</string>
    <string name="control">Control</string>
    <string name="oncall">On call</string>
    <string name="speaker">Speakerphone</string>
    <string name="speaker_sum">Turn on speakerphone</string>
    <string name="autoanswer">Auto answer</string>
    <string-array name="answer_times">
        <item>0</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
    </string-array>
    <string-array name="times">
        <item>no auto answer</item>
        <item>after 2 sec</item>
        <item>after 5 sec</item>
        <item>after 10 sec</item>
        <item>after 15 sec</item>
    </string-array>
    <string name="ring_time">Switch to CG on incoming call</string>
    <string-array name="ring_times_value">
        <item>-1</item>
        <item>0</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
    </string-array>
    <string-array name="ring_times">
        <item>never</item>
        <item>at once</item>
        <item>after 2 sec</item>
        <item>after 5 sec</item>
        <item>after 10 sec</item>
    </string-array>
    <string name="cg_start">Start with previous route</string>
    <string name="cg_start_sum">For launch CG with previous route press button Continue route</string>
    <string name="no_route">Start without route</string>
    <string name="no_route_sum">For launch CG without route press button with CG icon</string>
    <string name="gps">GPS</string>
    <string name="gps_sum">Enable GPS</string>
    <string name="no_gps_title">Can\'t control GPS</string>
    <string name="no_gps_message">By security reasons in android 2.3+ application can\'t control
        GPS
    </string>
    <string name="settings">Settings</string>
    <string name="cont">Continue</string>
    <string name="intents">Intents processing</string>
    <string name="intents_sum">Processing intents for Tasker integration</string>
    <string-array name="days">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
    <string name="alldays">All days</string>
    <string name="workdays">Working days</string>
    <string name="holidays">Holidays</string>
    <string name="weekdays">Days of week</string>
    <string name="launch">Launch CG</string>
    <string name="exit">Exit</string>
    <string name="after">after</string>
    <string name="never">Never</string>
    <string name="always">Always</string>
    <string name="cont_route">Continue route</string>
    <string name="unknown">Unknown</string>
    <string name="show_oncall">Show call info</string>
    <string name="show_oncall_sum">For move call info info hold it over 1 sec</string>
    <string name="remove_rta">Clear RtaLog</string>
    <string name="remove_rta_sum">Remove old files from RtaLogs</string>
    <string name="sms">SMS reject message</string>
    <string name="def_sms">I in a way, will call back later</string>
    <string-array name="rotate_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="rotate_entries">
        <item>Don\'t change</item>
        <item>Disable rotation</item>
        <item>Set portrait</item>
        <item>Set landscape</item>
    </string-array>
    <string-array name="rotate_entries2">
        <item>Don\'t change</item>
        <item>Disable rotation</item>
    </string-array>
    <string name="ok">OK</string>
    <string name="plugin">CityGuide</string>
    <string name="kill_cg">Kill CG</string>
    <string name="kill_car">Kill CG on inject from car dock</string>
    <string name="kill_power">Kill CG on disconnect from power</string>
    <string name="require_su">Require root</string>
    <string name="require_su_msg">For terminate CG application require root privilegies</string>
    <string name="ping">Test data connectivity</string>
    <string name="ping_sum">Restart connection if data is not available</string>
    <string name="beer">Beer for developer</string>
    <string name="show_notification">Show notification</string>
    <string name="notification_sum">Show system notification disabled</string>
    <string name="notification_title">Notification enable</string>
    <string name="notification_message">For enable notification open Settings and select Accessibility\nGrant CG_starter rights for access to notifications</string>
    <string name="notification_ignore">Disable notification</string>
    <string name="notification_ignore_msg">Disable all notification from %s?</string>
    <string name="notification_ignore_sum">For ignore notification tap and hold message window over 1sec</string>
    <string name="power_delay">Delay for start on power</string>
    <string name="route_type">Route type</string>
    <string name="route_type_short">Select type or route: Short\nSet optimal route type?</string>
    <string name="route_type_foot">Select type or route: Foot\nSet optimal route type?</string>
    <string name="show_sms">Show SMS</string>
    <string name="show_sms_sum">For mark SMS as read tap on message window</string>
    <string name="mapcam">Launch MapCamDroid</string>
    <string name="strelka">Launch StrelkaGPS</string>
    <string name="start_point">Start point</string>
    <string name="start_point_sum">Default start point of route</string>
    <string name="yandex">Traffic indicator</string>
    <string name="yandex_sum">Show Yandex traffic indicator</string>
    <string name="vertical">Start only in vertical orientation</string>
    <string name="quick_launch">Quick launch</string>
    <string name="quick_launch_sum">Select application for quick launch</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="send_finish">Send finish location</string>
    <string name="send_current">Send current location</string>
    <string name="send_location">Send location</string>
    <string name="no_finish">Finish is not set</string>
    <string name="find_location">Find location...</string>
    <string name="go">Go to point</string>
    <string name="traffic">Traffic indicator</string>
    <string name="quick_alpha">Quick start icon transparency</string>
    <string name="sensor_off">Orientation is not use</string>
    <string name="sensor_unknown">Orientation is unknown</string>
    <string name="sensor_vertical">Orientation is vertical now</string>
    <string name="sensor_horizontal">Orientation is horizontal now</string>
    <string name="from_contacts">Select finish from contacts</string>
    <string name="from_sms">Select finish from SMS</string>
    <string name="select_addr">Select address</string>
    <string name="no_address">Address not found</string>
    <string name="error">Error</string>
    <string name="voice_search">Voice search</string>
    <string name="prepare">Prepare</string>
    <string name="speak">Speak</string>
    <string name="search">Search</string>
    <string name="km">km</string>
    <string name="help">Help</string>
    <string name="beer_sum">QIWI: +79811926130\nYandex: 41001624374507</string>
    <string name="apps">Applications</string>
    <string name="quick_size">Icon size</string>
    <string name="notification">Notification</string>
    <string name="notification_time">Hide notification after %1 sec</string>
    <string name="start">Start up</string>
    <string-array name="inactive_entries">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="inactive_values">
        <item>Start CG</item>
        <item>Exit application</item>
    </string-array>
    <string name="text_search">Search</string>
    <string name="not_found">Not found</string>
    <string name="call_contact">Contact</string>
    <string name="no_phone">No phone number for contact</string>
    <string name="select_phone">Select phone</string>
    <string name="phone_home">home</string>
    <string name="phone_work">work</string>
    <string name="phone_mobile">mobile</string>
    <string name="last_call">Call last number</string>
    <string name="cg_run">Run:</string>
    <string name="refresh">Refresh points</string>
    <string name="refresh_msg">Refresh points on start screen from bookmarks</string>
    <string name="wifi">WiFi</string>
    <string name="wifi_sum">WiFi off on tirn on mobile data</string>
    <string name="toggle_volume">Toggle volume</string>
    <string name="okgoogle">Ok, Google</string>
    <string name="okgoogle_sum">Detect hotword Google search</string>
    <string name="last_position">Last position</string>
    <string name="xposed_lock">Install NoLock Home xposed module</string>
    <string name="xposed_lock_sum">With this module starter can unlock device on start</string>
    <string name="xposed_route">Install navigation select xposed module</string>
    <string name="xposed_route_sum">With this module you can select navigation application for start from google search results</string>
    <string name="bt_close">Close on BT</string>
    <string name="bt_close_sum">Close application on BlueTooth device disconnect</string>
</resources>
