<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="button"
        android:title="@string/button"
        android:summary="@string/button_sum" />

    <Preference
        android:key="start"
        android:title="@string/cg_start"
        android:summary="@string/cg_start_sum" />

    <Preference
        android:key="no_route"
        android:title="@string/no_route"
        android:summary="@string/no_route_sum" />

    <PreferenceCategory android:title="@string/auto">

        <ru.shutoff.cgstarter.SeekBarPreference
            android:key="auto_pause"
            android:title="@string/auto_pause"
            android:defaultValue="5"
            android:max="20"
            android:text="@string/sec" />

        <ru.shutoff.cgstarter.InactivePreference
            android:key="inactive_pause"
            android:title="@string/inactive_pause"
            android:defaultValue="30"
            android:max="120"
            android:text="@string/sec" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/control">

        <CheckBoxPreference
            android:key="rotate"
            android:title="@string/rotate"
            android:summary="@string/rotate_sum" />

        <CheckBoxPreference
            android:key="gps"
            android:title="@string/gps"
            android:summary="@string/gps_sum" />

        <ru.shutoff.cgstarter.VolumePreference
            android:key="level"
            android:title="@string/level"
            android:defaultValue="100"
            android:max="100"
            android:text="%" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/phone">

        <CheckBoxPreference
            android:key="bt"
            android:title="@string/bt"
            android:summary="@string/bt_sum" />

        <CheckBoxPreference
            android:key="data"
            android:title="@string/data"
            android:summary="@string/data_sum" />

        <CheckBoxPreference
            android:key="phone"
            android:title="@string/oncall"
            android:summary="@string/phone_sum" />

        <CheckBoxPreference
            android:key="phone_show"
            android:title="@string/show_oncall"
            android:summary="@string/show_oncall_sum" />

        <CheckBoxPreference
            android:key="speaker"
            android:title="@string/speaker"
            android:summary="@string/speaker_sum" />

        <ListPreference
            android:key="answertime"
            android:title="@string/autoanswer"
            android:defaultValue="0"
            android:entries="@array/times"
            android:entryValues="@array/answer_times" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/power">

        <CheckBoxPreference
            android:key="carmode"
            android:title="@string/carmode"
            android:summary="@string/carmode_sum" />

        <ru.shutoff.cgstarter.TimePreference
            android:key="powertime"
            android:title="@string/powermode" />

    </PreferenceCategory>

    <Preference
        android:key="intents"
        android:title="@string/intents"
        android:summary="@string/intents_sum" />

    <Preference
        android:key="about"
        android:title="@string/about"
        android:summary="@string/version" />


</PreferenceScreen>