<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="item"
        android:title="@string/item" />

    <EditTextPreference
        android:key="name"
        android:title="@string/name" />

    <Preference
        android:key="clear"
        android:title="@string/clear"
        android:summary="@string/clear_sum" />

    <PreferenceCategory android:title="@string/auto">

        <CheckBoxPreference
            android:key="auto"
            android:title="@string/auto"
            android:summary="@string/auto_sum" />

        <ru.shutoff.cgstarter.TimePreference
            android:key="period"
            android:title="@string/interval"
            android:summary="@string/interval_sum" />

        <ru.shutoff.cgstarter.DaysPreference
            android:key="days"
            android:title="@string/days" />

    </PreferenceCategory>

</PreferenceScreen>