<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <CheckBox
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oncall"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_sum"
            android:paddingLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <CheckBox
            android:id="@+id/phone_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_oncall"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_oncall_sum"
            android:paddingLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autoanswer"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingTop="10dp" />

        <Spinner
            android:id="@+id/autoanswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <CheckBox
            android:id="@+id/speaker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speaker"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speaker_sum"
            android:paddingLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ring_time"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingTop="10dp" />

        <Spinner
            android:id="@+id/ringtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:id="@+id/sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sms"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/sms_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>